--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,10 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon --ignore \"./data\" server.js",
-    "prod": "node server.js"
+    "prod": "set NODE_ENV=production&&node server.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cryptr": "^6.2.0",
